edit out template

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <meta charset="utf-8">
 <meta name="description" content="">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Orly - Bootstrap Coming Soon template</title>
+<title>Affective Shifting</title>
 <link rel="stylesheet" href="css/bootstrap.min.css">
 <link rel="stylesheet" href="css/main.css">
 <link rel="stylesheet" href="css/responsive.css">
@@ -28,13 +28,11 @@
     <div class="inner-bg">
       <div class="container">
         <div class="col-md-10 col-md-offset-1">
-          <div class="banner-text text-center"> <a class="logo" href="#">Orly</a>
-            <h1>Coming soon</h1>
-            <!--Countdown -->
-            <div id="countdown"></div>
-            <!--Countdown --> 
+          <div class="banner-text text-center"> <a class="logo" href="#">Affective Shifting</a>
+            <h1>Coming soon</h1><br>
             <a href="#subscribes" class="btn">Notify me</a>
-            </p>
+            <a href="#subscribes" class="btn">Notify me</a>
+            
           </div>
         </div>
       </div>
@@ -55,8 +53,9 @@
       </div>
       <div class="col-md-7  col-md-offset-1 col-sm-6">
         <div class="intro-content">
-          <h2>Welcome to Orly</h2>
-          <p>Orly is a professional, unique and modern HTML template for a creative agency, portfolio or general business. It can be used as your Coming Soon Page while the main site is under construction.</p>
+          <h2>Welcome to Affective Shifting</h2>
+          <p>Affective Shifting is a professional, unique, and data-driven tool for a <b>empowering leadership</b>, <b>developing the self</b>, and <b>aligning you with your business values</b>. 
+            It was developed by psychologists and coaches from <b>KM Friederichs Group</b> to enact the changes you want to <b>get things done</b>.</p>
         </div>
         
         <!-- intro --> 
@@ -96,7 +95,7 @@
   <div class="container">
     <div class="row">
       <div class="footer-col col-md-5">
-        <p>Copyright © 2015 Orly Inc. All Rights Reserved.</p>
+        <p>Copyright © 2022 Affective Shifting Inc. All Rights Reserved.</p>
         <p> Made with <i class="fa fa-heart pulse"></i> by <a href="http://www.designstub.com/">Designstub</a></p>
       </div>
       <div class="footer-col col-md-7">
