--- a/merrychristmas.html
+++ b/merrychristmas.html
@@ -144,7 +144,7 @@ html, body {
 </style>
 <head>
 	<meta charset="UTF-8">
-	<title>Christmas Button</title>
+	<title>Merry Christmas</title>
 	<link href='https://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
 </head>
 <body>
