--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <h1>Coming soon</h1>
             <br><br>
             <a href="#subscribes" class="btn">Notify me</a>
-            <a href="templates/monica/index.html" class="btn">   Visit Us   </a>
+            <a href="#" class="btn">Visit Us</a>
             
           </div>
         </div>
