final edits for delivery

--- a/merrychristmas.html
+++ b/merrychristmas.html
@@ -152,7 +152,7 @@ html, body {
         
 		<div class="centerer">
             <a href="#" class="greeting">Merry Chrismas Meine Wunderfrau!!</a><br>
-            <a href="index.html" class="button">Open Me!</a>
+            <a href="https://www.affectiveshifting.com" class="button">Open Me!</a>
 			<a href="templates/monica/index.html" class="button">Open Me!</a>
             <!-- <p class="option">or</p> -->
             <a href="templates/knox/index-static.html" class="button">Open Me!</a>
