--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       </div>
       <div class="col-md-7  col-md-offset-1 col-sm-6">
         <div class="intro-content">
-          <h2>Welcome to Affective Shifting!</h2>
+          <h2>Welcome to Affective Shifting</h2>
           <p>Affective Shifting is a professional, unique, and data-driven tool for <b>empowering leadership</b>, <b>developing the self</b>, and <b>aligning you with your business values</b>. 
             It was developed by psychologists and coaches from <b>KM Friederichs Coaching</b> to enact the changes you want for <b>getting  things done</b>.</p>
         </div>
