--- a/index.html
+++ b/index.html
@@ -55,8 +55,14 @@
       <div class="col-md-7  col-md-offset-1 col-sm-6">
         <div class="intro-content">
           <h2>Welcome to Affective Shifting</h2>
-          <p>Affective Shifting is a professional, unique, and data-driven tool for <b>empowering leadership</b>, <b>developing the self</b>, and <b>aligning you with your business values</b>. 
-            It was developed by psychologists and coaches from <b>KM Friederichs Coaching</b> to enact the changes you want for <b>getting  things done</b>.</p>
+          <p>Affective Shifting is a professional, unique, and data-driven tool for <b> improved goal attainment</b>.
+            It was developed by psychologists to improve an individuals' ability of <b>getting things done</b>.</p>
+          <p> Imagine experiencing a profound sense of emotional control, effortlessly maintaining a psoitive and motivated state even when faced with demanding or challenging tasks.
+            Say goodbye to the barriers of procrastions, self-doubt, and other obstacles that have held you back from realizing your full potential. 
+          With the transformative power of affective shifting you can surpass these limtation an achieve your results with ease. </p>
+          <p><b>Affective shifting</b> is a <b>cutting-edge</b> and <b>scientifically</b> proven tool, meticulously designed to help you <b>achieve your goals</b> and <b>enhance your overall well-being</b>.
+          By mastering this powerful technique, you can can <b>significantly improve your ability to follow through on your intentions</b> and take <b>decisive action</b> toward accomplishing your goals.
+          <b>Empower yourself</b> with the practice of affective shifting and <b>unlock</b> a whole new level of <b>personal sucess</b>. </p>
         </div>
         
         <!-- intro --> 
