Header affective shifting new paragraph

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       </div>
       <div class="col-md-7  col-md-offset-1 col-sm-6">
         <div class="intro-content">
-          <h2>Welcome to Affective Shifting</h2>
+          <p><h2>Welcome to Affective Shifting</h2></p>
           <p>Affective Shifting is a professional, unique, and data-driven tool for <b> improved goal attainment</b>.
             It was developed by psychologists to improve an individuals' ability of <b>getting things done</b>.</p>
           <p> Imagine experiencing a profound sense of emotional control, effortlessly maintaining a psoitive and motivated state even when faced with demanding or challenging tasks.
