--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
           <p><h2>Welcome to Affective Shifting</h2></p>
           <p>Affective Shifting is a professional, unique, and data-driven tool for <b> improved goal attainment</b>.
             It was developed by psychologists to improve an individuals' ability of <b>getting things done</b>.</p>
-          <p> Imagine experiencing a profound sense of emotional control, effortlessly maintaining a psoitive and motivated state even when faced with demanding or challenging tasks.
-            Say goodbye to the barriers of procrastions, self-doubt, and other obstacles that have held you back from realizing your full potential. 
-          With the transformative power of affective shifting you can surpass these limtation an achieve your results with ease. </p>
+          <p> Imagine experiencing a <b>profound sense of emotional control</b>, effortlessly maintaining a <b>positive and motivated state</b> even when faced with demanding or challenging tasks.
+            <b>Say goodbye</b> to the barriers of <b>procrastions, self-doubt, and other obstacles</b> that have held you back from realizing your full potential. 
+          With the <b>transformative power</b> of affective shifting you can surpass these limtation an <b>achieve your results with ease</b>. </p>
           <p><b>Affective shifting</b> is a <b>cutting-edge</b> and <b>scientifically</b> proven tool, meticulously designed to help you <b>achieve your goals</b> and <b>enhance your overall well-being</b>.
           By mastering this powerful technique, you can can <b>significantly improve your ability to follow through on your intentions</b> and take <b>decisive action</b> toward accomplishing your goals.
           <b>Empower yourself</b> with the practice of affective shifting and <b>unlock</b> a whole new level of <b>personal sucess</b>. </p>
