--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <div class="col-md-7  col-md-offset-1 col-sm-6">
         <div class="intro-content">
           <p><h2>Welcome to Affective Shifting</h2></p>
-          <p>Affective Shifting is a professional, unique, and data-driven tool for <b> improved goal attainment</b>.
+          <p>Affective shifting is a professional, unique, and data-driven tool for <b> improved goal attainment</b>.
             It was developed by psychologists to improve an individuals' ability of <b>getting things done</b>.</p>
           <p> Imagine experiencing a <b>profound sense of emotional control</b>, effortlessly maintaining a <b>positive and motivated state</b> even when faced with demanding or challenging tasks.
             <b>Say goodbye</b> to the barriers of <b>procrastions, self-doubt, and other obstacles</b> that have held you back from realizing your full potential. 
