update notify me section

--- a/index.html
+++ b/index.html
@@ -78,12 +78,19 @@
   <title>My Website</title>
 </head>
 <body>
-  <h1>Welcome to My Website</h1>
+  <section id="subscribe" class="subscribe">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-12 col-md-5 subscribe-title">
+          <h2>Subscribe now.</h2>
+        </div>
 
-  <section id="subscribe">
-    <h2>Subscribe</h2>
-    <p>Subscribe to our updates and be notified about the latest news, offers, and events.</p>
-    <button id="notifyButton">Notify Me</button>
+        <div class="col-sm-12 col-md-7 subscribe-form">
+          <p>Subscribe to our updates and be notified about the latest news, offers, and events.</p>
+          <button id="notifyButton">Notify Me</button>
+        </div>
+      </div>
+    </div>
   </section>
 
   <script>
@@ -98,6 +105,7 @@
   </script>
 </body>
 </html>
+
 
       
         
