update color orange

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
   <title>My Website</title>
   <style>
     .notify-button {
-      background-color: #4CAF50;
+      background-color: #FF9800;
       color: white;
       padding: 10px 20px;
       font-size: 16px;
@@ -88,7 +88,11 @@
     }
 
     .notify-button:hover {
-      background-color: #45a049;
+      background-color: #F57C00;
+    }
+
+    .subscribe-form p {
+      color: white;
     }
   </style>
 </head>
@@ -101,7 +105,7 @@
         </div>
 
         <div class="col-sm-12 col-md-7 subscribe-form">
-          <p>You want to try the tool yourself? We are currently in the process of making affective shifting available for everyone in an app. Click the notify me button and let us know to inform you how our progress is going and when the app will be available.</p>
+          <p>You want to try the affective shifting yourself? We are currently in the process of making affective shifting available for everyone in an app. Click the notify me button and let us know to inform you how our progress is going and when the app will be available..</p>
           <button id="notifyButton" class="notify-button">Notify Me</button>
         </div>
       </div>
@@ -110,7 +114,7 @@
 
   <script>
     document.getElementById("notifyButton").addEventListener("click", function() {
-      var emailAddress = "affectiveshifting@example.com";
+      var emailAddress = "affectiveshifting@gmail.com";
       var subject = "Notify Me";
       var body = "Yes please notify me about updates on affective shifting.";
 
@@ -120,7 +124,6 @@
   </script>
 </body>
 </html>
-
 
       
         
