updated subscribe form

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         </div>
 
         <div class="col-sm-12 col-md-7 subscribe-form">
-          <p>Subscribe to our updates and be notified about the latest news, offers, and events.</p>
+          <p>You want to try affective shifting yourself? We are currently in the process of making affective shifting available for everyone in an app. Click the notify me button and let us know to inform you how our progress is going and when the app will be available.</p>
           <button id="notifyButton" class="notify-button">Notify Me</button>
         </div>
       </div>
@@ -119,9 +119,9 @@
 
   <script>
     document.getElementById("notifyButton").addEventListener("click", function() {
-      var emailAddress = "predefined@example.com";
+      var emailAddress = "affectiveshifting@gmail.com";
       var subject = "Notify Me";
-      var body = "Please notify me about updates.";
+      var body = "Yes, please notify me about updates on affective shifting!";
 
       var mailtoLink = "mailto:" + emailAddress + "?subject=" + encodeURIComponent(subject) + "&body=" + encodeURIComponent(body);
       window.location.href = mailtoLink;
