--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
   </style>
 </head>
 <body>
-  <section id="subscribe" class="subscribe">
+  <section id="subscribes" class="subscribe">
     <div class="container">
       <div class="row">
         <div class="col-sm-12 col-md-5 subscribe-title">
