Updated notify me text

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         </div>
 
         <div class="col-sm-12 col-md-7 subscribe-form">
-          <p>You want to try affective shifting yourself? We are currently in the process of making affective shifting available for everyone in an app. Click the notify me button and let us know to inform you how our progress is going and when the app will be available.</p>
+          <p>Interested in trying affective shifting yourself? We're working on an app to make it accessible to everyone. Simply click the "Notify Me" button to stay updated on our progress and be the first to know when the app is ready for you.</p>
           <button id="notifyButton" class="notify-button">Notify Me</button>
         </div>
       </div>
