--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
           <div class="banner-text text-center"> <a class="logo" href="#">Affective Shifting</a>
             <h1>Coming soon</h1>
             <br><br>
-            <a href="#subscribes" class="btn">Research</a>
-            <a href="#" class="btn">Notify me</a>
-            <a href="#" class="btn">About</a>
+            <a href="#research" class="btn">Research</a>
+            <a href="#subcribes" class="btn">Notify me</a>
+            <a href="#about" class="btn">About</a>
             
           </div>
         </div>
