--- a/index.html
+++ b/index.html
@@ -72,6 +72,27 @@
   </div>
 </section>
 <!--intro section --> 
+<!DOCTYPE html>
+<html>
+<head>
+
+    <h2>Research</h2>
+    <p>
+        Check out our latest research paper titled "The Art of Getting Things Done: Training affective shifting improves intention enactment."
+        <br>
+        <a href="https://psycnet.apa.org/record/2022-89015-001">Read the full research paper here</a>.
+    </p>
+    <p>
+        Short Summary: The research paper explores the effectiveness of training affective shifting in improving intention enactment. It provides valuable insights into the benefits of affective shifting techniques and their impact on achieving goals.
+    </p>
+
+    <footer>
+        <!-- Footer content here -->
+    </footer>
+</body>
+<section id="research" class="research"></section>
+</html>
+
 <!--subscribe section -->
 <!DOCTYPE html>
 <html>
