--- a/index.html
+++ b/index.html
@@ -75,6 +75,39 @@
 <!DOCTYPE html>
 <html>
 <head>
+<style>  body {
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 20px;
+}
+
+h1 {
+  text-align: center;
+}
+
+nav ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  text-align: center;
+}
+
+nav li {
+  display: inline-block;
+  margin-right: 10px;
+}
+
+nav a {
+  text-decoration: none;
+}
+
+h2 {
+  margin-top: 30px;
+}
+
+p {
+  line-height: 1.5;
+}</style>
 
     <h2>Research</h2>
     <p>
