added class and section id

--- a/index.html
+++ b/index.html
@@ -72,11 +72,10 @@
   </div>
 </section>
 <!--intro section --> 
+<section id="research" class="research"></section>
 <!DOCTYPE html>
 <html>
 <head>
-
-
     <h2>Research</h2>
     <p>
         Check out our latest research paper titled "The Art of Getting Things Done: Training affective shifting improves intention enactment."
