Improve research section

--- a/index.html
+++ b/index.html
@@ -75,8 +75,17 @@
 <section id="research" class="research"></section>
 <!DOCTYPE html>
 <html>
-<head>
-    <h2>Research</h2>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-4 col-sm-6">
+        <div class="intro-content">
+          <h1>Research</h1>
+  </div>
+  <!--intro section --> 
+</div>
+<div class="col-md-7  col-md-offset-1 col-sm-6">
+  <div class="intro-content">    
+    <p><h2>The Art of Getting Things Done</h2></p>
     <p>
         Check out our latest research paper titled "The Art of Getting Things Done: Training affective shifting improves intention enactment."
         <br>
