improve research section

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
   </div>
 </section>
 <!--intro section --> 
-<section id="research" class="research"></section>
+<section id="intro" class="section intro"></section>
 <!DOCTYPE html>
 <html>
   <div class="container">
@@ -92,7 +92,7 @@
         <a href="https://psycnet.apa.org/record/2022-89015-001">Read the full research paper here</a>.
     </p>
     <p>
-        Short Summary: The research paper explores the effectiveness of training affective shifting in improving intention enactment. It provides valuable insights into the benefits of affective shifting techniques and their impact on achieving goals.
+        This research paper explores the effectiveness of training affective shifting in improving intention enactment. It provides valuable insights into the benefits of affective shifting techniques and their impact on achieving goals.
     </p>
 
     <footer>
