Update research section

--- a/index.html
+++ b/index.html
@@ -72,28 +72,27 @@
   </div>
 </section>
 <!--intro section --> 
-<section id="intro" class="section intro"></section>
-<!DOCTYPE html>
-<html>
+<section id="research" class="section intro">
   <div class="container">
-    <div class="row">
-      <div class="col-md-4 col-sm-6">
-        <div class="intro-content">
-          <h1>Research</h1>
+      <div class="row">
+          <div class="col-md-4 col-sm-6">
+              <div class="intro-content">
+                  <h1>Research</h1>
+              </div>
+          </div>
+          <div class="col-md-7 col-md-offset-1 col-sm-6">
+              <div class="intro-content">
+                  <h2>The Art of Getting Things Done</h2>
+                  <p>Check out our latest research paper titled "The Art of Getting Things Done: Training affective shifting improves intention enactment."
+                      <br>
+                      <a href="https://psycnet.apa.org/record/2022-89015-001">Read the full research paper here</a>.
+                  </p>
+                  <p>This research paper explores the effectiveness of training affective shifting in improving intention enactment. It provides valuable insights into the benefits of affective shifting techniques and their impact on achieving goals.</p>
+              </div>
+          </div>
+      </div>
   </div>
-  <!--intro section --> 
-</div>
-<div class="col-md-7  col-md-offset-1 col-sm-6">
-  <div class="intro-content">    
-    <p><h2>The Art of Getting Things Done</h2></p>
-    <p>
-        Check out our latest research paper titled "The Art of Getting Things Done: Training affective shifting improves intention enactment."
-        <br>
-        <a href="https://psycnet.apa.org/record/2022-89015-001">Read the full research paper here</a>.
-    </p>
-    <p>
-        This research paper explores the effectiveness of training affective shifting in improving intention enactment. It provides valuable insights into the benefits of affective shifting techniques and their impact on achieving goals.
-    </p>
+</section>
 
 
 <!--subscribe section -->
