changes in reiter

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
           <div class="banner-text text-center"> <a class="logo" href="#">Affective Shifting</a>
             <h1>Coming soon</h1>
             <br><br>
-            <a href="#research" class="btn">Research</a>
-            <a href="#subcribes" class="btn">Notify me</a>
             <a href="#about" class="btn">About</a>
+            <a href="#research" class="btn">research</a>
+            <a href="#subscribes" class="btn">Notify me</a>
             
           </div>
         </div>
@@ -93,7 +93,6 @@
       </div>
   </div>
 </section>
-
 
 <!--subscribe section -->
 <!DOCTYPE html>
