improve research section

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                       <br>
                       <a href="https://psycnet.apa.org/record/2022-89015-001">Read the full research paper here</a>.
                   </p>
-                  <p>This research paper explores the effectiveness of training affective shifting in improving intention enactment. It provides valuable insights into the benefits of affective shifting techniques and their impact on achieving goals.</p>
+                  <p>This research paper explores the effectiveness of training affective shifting in improving intention enactment. It provides valuable insights into the benefits of affective shifting and its impact on achieving goals.</p>
               </div>
           </div>
       </div>
@@ -97,7 +97,7 @@
 <!--subscribe section -->
 <!DOCTYPE html>
 <html>
-<head>
+<head> 
   <title>My Website</title>
   <style>
     .notify-button {
