--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       <div class="row">
           <div class="col-md-4 col-sm-6">
               <div class="intro-content">
-                  <h1>Research</h1>
+                  <h1>The Research behind</h1>
               </div>
           </div>
           <div class="col-md-7 col-md-offset-1 col-sm-6">
@@ -133,7 +133,7 @@
         </div>
 
         <div class="col-sm-12 col-md-7 subscribe-form">
-          <p>Interested in trying affective shifting yourself? We're working on an app to make it accessible to everyone. Simply click the "Notify Me" button to stay updated on our progress and be the first to know when the app is ready for you.</p>
+          <p>Interested in trying affective shifting yourself? We're working on an app to make it accessible to everyone. Simply click the "Notify Me" button to stay updated on our progress and be the first to know when you can start affective shifting.</p>
           <button id="notifyButton" class="notify-button">Notify Me</button>
         </div>
       </div>
