--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       <div class="row">
           <div class="col-md-4 col-sm-6">
               <div class="intro-content">
-                  <h1>The Research behind</h1>
+                  <h1>The research behind</h1>
               </div>
           </div>
           <div class="col-md-7 col-md-offset-1 col-sm-6">
