--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                   <h2>The Art of Getting Things Done</h2>
                   <p>Check out our latest research paper titled "The Art of Getting Things Done: Training affective shifting improves intention enactment."
                       <br>
-                      <a href="https://psycnet.apa.org/record/2022-89015-001">Read the full research paper here</a>.
+                      <a href="https://psycnet.apa.org/record/2022-89015-001" target="_blank">Read the full research paper here</a>
                   </p>
                   <p>This research paper explores the effectiveness of training affective shifting in improving intention enactment. It provides valuable insights into the benefits of affective shifting and its impact on achieving goals.</p>
               </div>
