--- a/index.html
+++ b/index.html
@@ -84,8 +84,18 @@
               <div class="intro-content">
                   <h2>The Art of Getting Things Done</h2>
                   <p>Check out our latest research paper titled "The Art of Getting Things Done: Training affective shifting improves intention enactment."
-                      <br>
-                      <a href="https://psycnet.apa.org/record/2022-89015-001" target="_blank">Read the full research paper here</a>
+                      <br>  </p>
+                      <style>
+                        .grey-frame {
+                          display: inline-block;
+                          border: 2px solid grey;
+                          padding: 5px;
+                          color: grey;
+                          text-decoration: none;
+                        }
+                      </style>
+                      
+                      <p>  <a href="https://psycnet.apa.org/record/2022-89015-001" target="_blank" class="grey-frame">Read the full research paper here</a> 
                   </p>
                   <p>This research paper explores the effectiveness of training affective shifting in improving intention enactment. It provides valuable insights into the benefits of affective shifting and its impact on achieving goals.</p>
               </div>
