Backround color research section

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
   </div>
 </section>
 <!--intro section --> 
-<section id="research" class="section intro">
+<section id="research" class="section intro" style="background-color: lightgrey;">
   <div class="container">
       <div class="row">
           <div class="col-md-4 col-sm-6">
