--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                       
                       <p>  <a href="https://psycnet.apa.org/record/2022-89015-001" target="_blank" class="grey-frame">Read the full research paper here</a> 
                   </p>
-                  <p>This research paper explores the <b>effectiveness</b> of training affective shifting in improving intention enactment. It provides <b>valuable insights</b> into the <b>benefits of affective shifting</b> and its <b>mpact on achieving goals</b>i.</p>
+                  <p>This research paper explores the <b>effectiveness</b> of training affective shifting in improving intention enactment. It provides <b>valuable insights</b> into the <b>benefits of affective shifting</b> and its <b>impact on achieving goals</b>.</p>
               </div>
           </div>
       </div>
