integrating picture into research subsection

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
   </div>
 </section>
 <!--intro section --> 
-<section id="research" class="section intro" style="background-color: lightgrey;">
+<section id="research" class="section intro" style="background-image: url('https://unsplash.com/photos/B30XL_m3fso/download?force=true'); background-color: transparent;">
   <div class="container">
       <div class="row">
           <div class="col-md-4 col-sm-6">
@@ -103,6 +103,9 @@
       </div>
   </div>
 </section>
+
+<p style="text-align: center; font-style: italic;">Photo by <a href="https://unsplash.com/@guzimak?utm_source=unsplash&utm_medium=referral&utm_content=creditShareLink">Guzel Maksutova</a> on Unsplash</p>
+
 
 <!--subscribe section -->
 <!DOCTYPE html>
