update backround picture research

--- a/index.html
+++ b/index.html
@@ -72,12 +72,24 @@
   </div>
 </section>
 <!--intro section --> 
-<section id="research" class="section intro" style="background-image: url('https://unsplash.com/photos/FHnnjk1Yj7Y/download?force=true'); background-color: transparent;">
+<section id="research" class="section intro" style="background-color: transparent;">
   <div class="container">
       <div class="row">
           <div class="col-md-4 col-sm-6">
               <div class="intro-content">
                   <h1>The research behind</h1>
+                  <style>
+                    .research-image {
+                      display: block;
+                      margin-top: 20px;
+                      background-image: url('https://unsplash.com/photos/s9CC2SKySJM/download?force=true');
+                      background-size: cover;
+                      background-position: center;
+                      width: 100%;
+                      height: auto;
+                    }
+                  </style>
+                  <div class="research-image"></div>
               </div>
           </div>
           <div class="col-md-7 col-md-offset-1 col-sm-6">
@@ -103,8 +115,6 @@
       </div>
   </div>
 </section>
-
-
 <!--subscribe section -->
 <!DOCTYPE html>
 <html>
