edits research section

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     .research-image {
                       display: block;
                       margin-top: 20px;
-                      background-image: url('https://unsplash.com/photos/B30XL_m3fso/download?force=true');
+                      background-image: url('https://unsplash.com/photos/UqDhpC_rc_I/download?force=true');
                       background-size: cover;
                       background-position: center;
                       width: 100%;
@@ -95,21 +95,21 @@
           <div class="col-md-7 col-md-offset-1 col-sm-6">
               <div class="intro-content">
                   <h2>The Art of Getting Things Done</h2>
-                  <p>Check out our latest research paper titled "The Art of Getting Things Done: Training affective shifting improves intention enactment."
-                      <br>  </p>
-                      <style>
-                        .grey-frame {
-                          display: inline-block;
-                          border: 2px solid grey;
-                          padding: 5px;
-                          color: grey;
-                          text-decoration: none;
-                        }
-                      </style>
-                      
-                      <p>  <a href="https://psycnet.apa.org/record/2022-89015-001" target="_blank" class="grey-frame">Read the full research paper here</a> 
-                  </p>
+                  <p>In today's rapidly changing and complex world, it is crucial to have effective methods that support individuals in translating their intentions into action. Many people struggle with implementing their plans due to increasing demands and challenges. However, there is a notable absence of methods that adequately address the role of emotional regulation skills in this process.</p>
+                  <p>Our approach acknowledges the pivotal role of self-regulating emotions in effectively bridging the gap between intention and action. By understanding and embracing the dynamic nature of emotions, we can significantly enhance psychological functioning. Through our innovative intervention known as affective shifting, we introduce a novel, effective, and easily applicable technique that fills the existing void of theory- and evidence-based methods in this field.</p>
+                  <p>Extensive research conducted by our team demonstrates the vital importance of deliberately practicing changes in the levels of positive emotions, both low and high, to facilitate successful intention implementation. By recognizing the significance of emotional states and actively engaging in affective shifting, individuals can bolster their capacity to bridge the intention-action gap and attain their goals.</p>
                   <p>This research paper explores the <b>effectiveness</b> of training affective shifting in improving intention enactment. It provides <b>valuable insights</b> into the <b>benefits of affective shifting</b> and its <b>impact on achieving goals</b>.</p>
+                  <br>
+                  <style>
+                    .grey-frame {
+                      display: inline-block;
+                      border: 2px solid grey;
+                      padding: 5px;
+                      color: grey;
+                      text-decoration: none;
+                    }
+                  </style>
+                  <p><a href="https://psycnet.apa.org/record/2022-89015-001" target="_blank" class="grey-frame">Read the full research paper here</a></p>
               </div>
           </div>
       </div>
