text adjustment Research

--- a/index.html
+++ b/index.html
@@ -95,10 +95,8 @@
           <div class="col-md-7 col-md-offset-1 col-sm-6">
               <div class="intro-content">
                   <h2>The Art of Getting Things Done</h2>
-                  <p>In today's rapidly changing and complex world, it is crucial to have effective methods that support individuals in translating their intentions into action. Many people struggle with implementing their plans due to increasing demands and challenges. However, there is a notable absence of methods that adequately address the role of emotional regulation skills in this process.</p>
-                  <p>Our approach acknowledges the pivotal role of self-regulating emotions in effectively bridging the gap between intention and action. By understanding and embracing the dynamic nature of emotions, we can significantly enhance psychological functioning. Through our innovative intervention known as affective shifting, we introduce a novel, effective, and easily applicable technique that fills the existing void of theory- and evidence-based methods in this field.</p>
-                  <p>Extensive research conducted by our team demonstrates the vital importance of deliberately practicing changes in the levels of positive emotions, both low and high, to facilitate successful intention implementation. By recognizing the significance of emotional states and actively engaging in affective shifting, individuals can bolster their capacity to bridge the intention-action gap and attain their goals.</p>
-                  <p>This research paper explores the <b>effectiveness</b> of training affective shifting in improving intention enactment. It provides <b>valuable insights</b> into the <b>benefits of affective shifting</b> and its <b>impact on achieving goals</b>.</p>
+                  <p>In today's complex world, many individuals face challenges in translating their intentions into action. Our approach recognizes the <b>crucial role of self-regulating emotions</b> in bridging the gap between intention and action. Through the practice of <b>affective shifting</b>, we offer an <b>innovative technique</b> to enhance psychological functioning. </p>
+                  <p>Extensive research demonstrates the <b>effectiveness</b> of training affective shifting for improved intention enactment. Our findings provide <b>valuable insights</b> into the <b>benefits of affective shifting</b> and its <b>impact on goal attainment</b>.</p>
                   <br>
                   <style>
                     .grey-frame {
