--- a/index.html
+++ b/index.html
@@ -74,42 +74,42 @@
 <!--intro section --> 
 <section id="research" class="section intro" style="background-color: transparent;">
   <div class="container">
-      <div class="row">
-          <div class="col-md-4 col-sm-6">
-              <div class="intro-content">
-                  <h1>The research behind</h1>
-              </div>
-          </div>
-          <div class="col-md-7 col-md-offset-1 col-sm-6">
-              <div class="intro-content">
-                  <h2>The Art of Getting Things Done</h2>
-                  <p>In today's complex world, many individuals face challenges in translating their intentions into action. Our approach recognizes the <b>crucial role of self-regulating emotions</b> in bridging the gap between intention and action. Through the practice of <b>affective shifting</b>, we offer an <b>innovative technique</b> to enhance psychological functioning. </p>
-                  <p>Extensive research demonstrates the <b>effectiveness</b> of training affective shifting for improved intention enactment. Our findings provide <b>valuable insights</b> into the <b>benefits of affective shifting</b> and its <b>impact on goal attainment</b>.</p>
-                  <br>
-
-                  <style>
-                    .grey-frame {
-                      display: inline-block;
-                      border: 2px solid grey;
-                      padding: 5px;
-                      color: grey;
-                      text-decoration: none;
-                    }
-                    .research-image {
-                      display: block;
-                      margin-top: 20px;
-                      background-image: url('https://unsplash.com/photos/UqDhpC_rc_I/download?ixid=M3wxMjA3fDB8MXxzZWFyY2h8MTZ8fGIlQzMlQkNjaGVyJTIwdW5kJTIwbm90aXpidWNofGRlfDB8fHx8MTY4NTQ1NjAwM3wy&force=true&w=2400');
-                      background-size: cover;
-                      background-position: center;
-                      width: 100%;
-                      height: auto;
-                    }
-                  </style>
-                  <div class="research-image"></div>
-                  <p><a href="https://psycnet.apa.org/record/2022-89015-001" target="_blank" class="grey-frame">Read the full research paper here</a></p>
-              </div>
-          </div>
+    <div class="row">
+      <div class="col-md-4 col-sm-6">
+        <div class="intro-content">
+          <h1>The research behind</h1>
+        </div>
       </div>
+      <div class="col-md-7 col-md-offset-1 col-sm-6">
+        <div class="intro-content">
+          <h2>The Art of Getting Things Done</h2>
+          <p>In today's complex world, many individuals face challenges in translating their intentions into action. Our approach recognizes the <b>crucial role of self-regulating emotions</b> in bridging the gap between intention and action. Through the practice of <b>affective shifting</b>, we offer an <b>innovative technique</b> to enhance psychological functioning.</p>
+          <p>Extensive research demonstrates the <b>effectiveness</b> of training affective shifting for improved intention enactment. Our findings provide <b>valuable insights</b> into the <b>benefits of affective shifting</b> and its <b>impact on goal attainment</b>.</p>
+          <br>
+
+          <style>
+            .grey-frame {
+              display: inline-block;
+              border: 2px solid grey;
+              padding: 5px;
+              color: grey;
+              text-decoration: none;
+            }
+            .research-image {
+              display: block;
+              margin-top: 20px;
+              background-image: url(https://github.com/kmfriederichs/kmfriederichs.github.io/blob/main/images/backgrounds/5.jpg);
+              background-size: cover;
+              background-position: center;
+              width: 100%;
+              height: auto;
+            }
+          </style>
+          <div class="research-image"></div>
+          <p><a href="https://psycnet.apa.org/record/2022-89015-001" target="_blank" class="grey-frame">Read the full research paper here</a></p>
+        </div>
+      </div>
+    </div>
   </div>
 </section>
 
