--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
           <style>
             .grey-frame {
               display: inline-block;
-              border: 2px solid grey;
-              padding: 5px;
-              color: grey;
+              border: 2px solid #FF9800;
+              padding: 10px 20px;
+              color: #FF9800;
               text-decoration: none;
             }
             .research-image {
