--- a/index.html
+++ b/index.html
@@ -90,10 +90,16 @@
           <style>
             .grey-frame {
               display: inline-block;
-              border: 2px solid #FF9800;
-              padding: 10px 20px;
-              color: #FF9800;
+              border: 2px solid grey;
+              padding: 5px;
+              background-color: #FAB431; /* Update to the desired button background color */
+              color: #fff; /* Update to the desired button text color */
               text-decoration: none;
+              transition: background-color 0.3s ease;
+            }
+            .grey-frame:hover {
+              background-color: #FAB431; /* Update to the desired button hover background color */
+              color: #fff; /* Update to the desired button hover text color */
             }
             .research-image {
               display: block;
@@ -107,6 +113,7 @@
           </style>
           <div class="research-image"></div>
           <p><a href="https://psycnet.apa.org/record/2022-89015-001" target="_blank" class="grey-frame">Read the full research paper here</a></p>
+          
         </div>
       </div>
     </div>
