--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 </section>
 <!--header section --> 
 <!--intro section -->
-<section id="intro" class="section intro">
+<section id="about" class="section intro">
   <div class="container">
     <div class="row">
       <div class="col-md-4 col-sm-6">
