--- a/index.html
+++ b/index.html
@@ -88,18 +88,17 @@
           <br>
 
           <style>
-            .grey-frame {
+            .research-button {
               display: inline-block;
-              border: 2px solid grey;
-              padding: 5px;
+              padding: 10px 20px;
               background-color: #FAB431; /* Update to the desired button background color */
               color: #fff; /* Update to the desired button text color */
               text-decoration: none;
+              border-radius: 20px; /* Add round corners */
               transition: background-color 0.3s ease;
             }
-            .grey-frame:hover {
-              background-color: #FAB431; /* Update to the desired button hover background color */
-              color: #fff; /* Update to the desired button hover text color */
+            .research-button:hover {
+              background-color: #E0993F; /* Update to the desired button hover background color */
             }
             .research-image {
               display: block;
@@ -112,7 +111,8 @@
             }
           </style>
           <div class="research-image"></div>
-          <p><a href="https://psycnet.apa.org/record/2022-89015-001" target="_blank" class="grey-frame">Read the full research paper here</a></p>
+          <p><a href="https://psycnet.apa.org/record/2022-89015-001" target="_blank" class="research-button">Read the full research paper here</a></p>
+          
           
         </div>
       </div>
