update button reserarch

--- a/index.html
+++ b/index.html
@@ -91,24 +91,16 @@
             .research-button {
               display: inline-block;
               padding: 10px 20px;
-              background-color: #FAB431; /* Update to the desired button background color */
-              color: #fff; /* Update to the desired button text color */
+              background-color: #FF9800; /* Update to the desired button background color */
+              color: white; /* Update to the desired button text color */
               text-decoration: none;
-              border-radius: 20px; /* Add round corners */
+              border-radius: 4px; /* Add round corners */
               transition: background-color 0.3s ease;
             }
             .research-button:hover {
-              background-color: #E0993F; /* Update to the desired button hover background color */
+              background-color: #F57C00; /* Update to the desired button hover background color */
             }
-            .research-image {
-              display: block;
-              margin-top: 20px;
-              background-image: url(https://github.com/kmfriederichs/kmfriederichs.github.io/blob/main/images/backgrounds/5.jpg);
-              background-size: cover;
-              background-position: center;
-              width: 100%;
-              height: auto;
-            }
+
           </style>
           <div class="research-image"></div>
           <p><a href="https://psycnet.apa.org/record/2022-89015-001" target="_blank" class="research-button">Read the full research paper here</a></p>
