--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
           </style>
           <div class="research-image"></div>
-          <p><a href="https://psycnet.apa.org/record/2022-89015-001" target="_blank" class="research-button">Read the full research paper here</a></p>
+          <p><a href="https://psycnet.apa.org/record/2022-89015-001" target="_blank" class="research-button">Read the full research paper</a></p>
           
           
         </div>
