--- a/index.html
+++ b/index.html
@@ -71,6 +71,16 @@
     </div>
   </div>
 </section>
+<section class="banner-divider">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <img src= D:\kmfriederichs.github.io\images\backgrounds\2.jpg alt="Divider Banner">
+      </div>
+    </div>
+  </div>
+</section>
+
 <!--intro section --> 
 <section id="research" class="section intro" style="background-color: transparent;">
   <div class="container">
