--- a/index.html
+++ b/index.html
@@ -71,11 +71,12 @@
     </div>
   </div>
 </section>
+
 <section class="banner-divider">
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-        <img src= D:\kmfriederichs.github.io\images\backgrounds\2.jpg alt="Divider Banner">
+        <img src="https://github.com/kmfriederichs/kmfriederichs.github.io/blob/main/images/backgrounds/2.jpg" alt="Divider Banner">
       </div>
     </div>
   </div>
