--- a/index.html
+++ b/index.html
@@ -70,17 +70,18 @@
       </div>
     </div>
   </div>
-</section>
-
+  
+<!-- Banner Divider -->
 <section class="banner-divider">
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-        <img src="https://github.com/kmfriederichs/kmfriederichs.github.io/blob/main/images/backgrounds/2.jpg" alt="Divider Banner">
+        <img src="D:\kmfriederichs.github.io\images\backgrounds\2.jpg" alt="Divider Banner">
       </div>
     </div>
   </div>
 </section>
+<!-- Banner Divider -->
 
 <!--intro section --> 
 <section id="research" class="section intro" style="background-color: transparent;">
