--- a/index.html
+++ b/index.html
@@ -70,13 +70,14 @@
       </div>
     </div>
   </div>
-  
+
+
 <!-- Banner Divider -->
 <section class="banner-divider">
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-        <img src="D:\kmfriederichs.github.io\images\backgrounds\2.jpg" alt="Divider Banner">
+        <img src="images\backgrounds\2.jpg" alt="Divider Banner">
       </div>
     </div>
   </div>
