--- a/index.html
+++ b/index.html
@@ -72,17 +72,17 @@
   </div>
 
 
-<!-- Banner Divider -->
+<!-- Divider Banner -->
 <section class="banner-divider">
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-        <img src="images\backgrounds\2.jpg" alt="Divider Banner">
+        <img src="images/backgrounds/2.jpg" alt="Divider Banner" class="divider-banner">
       </div>
     </div>
   </div>
 </section>
-<!-- Banner Divider -->
+<!-- Divider Banner -->
 
 <!--intro section --> 
 <section id="research" class="section intro" style="background-color: transparent;">
