--- a/index.html
+++ b/index.html
@@ -71,13 +71,12 @@
     </div>
   </div>
 
-
 <!-- Divider Banner -->
 <section class="banner-divider">
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-        <img src="images/backgrounds/2.jpg" alt="Divider Banner" class="divider-banner">
+        <div class="divider-line"></div>
       </div>
     </div>
   </div>
@@ -125,7 +124,17 @@
   </div>
 </section>
 
+<!--intro section -->
 
+<style>
+  .divider-line {
+    height: 2px;
+    background-image: url(images/backgrounds/2.jpg); /* Replace with the path to your divider image */
+    background-size: cover;
+    background-repeat: repeat-x;
+    background-position: center;
+  }
+</style>
 
 <!--subscribe section -->
 <!DOCTYPE html>
