--- a/index.html
+++ b/index.html
@@ -71,20 +71,9 @@
     </div>
   </div>
 
-<!-- Divider Banner -->
-<section class="banner-divider">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12">
-        <div class="divider-line"></div>
-      </div>
-    </div>
-  </div>
-</section>
-<!-- Divider Banner -->
 
 <!--intro section --> 
-<section id="research" class="section intro" style="background-color: transparent;">
+<section id="research" class="section intro" style="background-color: #B2DFDB;">
   <div class="container">
     <div class="row">
       <div class="col-md-4 col-sm-6">
@@ -116,25 +105,12 @@
           </style>
           <div class="research-image"></div>
           <p><a href="https://psycnet.apa.org/record/2022-89015-001" target="_blank" class="research-button">Read the full research paper</a></p>
-          
-          
         </div>
       </div>
     </div>
   </div>
 </section>
 
-<!--intro section -->
-
-<style>
-  .divider-line {
-    height: 60px;
-    background-image: url(images/backgrounds/2.jpg); /* Replace with the path to your divider image */
-    background-size: cover;
-    background-repeat: repeat-x;
-    background-position: center;
-  }
-</style>
 
 <!--subscribe section -->
 <!DOCTYPE html>
