--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
 
 <!--intro section --> 
-<section id="research" class="section intro" style="background-color: #B2DFDB;">
+<section id="research" class="section intro" style="background-color: #EAF5F2;">
   <div class="container">
     <div class="row">
       <div class="col-md-4 col-sm-6">
