--- a/index.html
+++ b/index.html
@@ -111,6 +111,17 @@
   </div>
 </section>
 
+<!-- Divider section -->
+<section class="banner-divider" style="background-color: #FFFFFF;">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <hr style="border-color: #000000;">
+      </div>
+    </div>
+  </div>
+</section>
+
 
 <!--subscribe section -->
 <!DOCTYPE html>
