--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-        <hr style="border-color: #000000;">
+        <hr style="border-color: #FFFFFF;">
       </div>
     </div>
   </div>
