--- a/index.html
+++ b/index.html
@@ -66,16 +66,10 @@
           <b>Empower yourself</b> with the practice of affective shifting and <b>unlock</b> a whole new level of <b>personal sucess</b>. </p>
         </div>
         
-<!-- Divider section -->
-<section class="banner-divider" style="background-color: #FFFFFF;">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12">
-        <hr style="border-color: #FFFFFF;">
+        <!-- intro --> 
       </div>
     </div>
   </div>
-</section>
 
 
 <!--intro section --> 
